Do not report that the automation is already running

--- a/blueprints/danfoss_ally_remote_temperature_min_delay.yaml
+++ b/blueprints/danfoss_ally_remote_temperature_min_delay.yaml
@@ -119,3 +119,4 @@ action:
           state_id: '{{ temp_sensor_id }}'
           attr_val: '{{ (states(temp_sensor_id)|round(2)) + 0.001 }}'
 mode: single
+max_exceeded: silent
