--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ steps.extract_branch.outputs.branch }}
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
       - run: pip install --upgrade pip wheel
       - run: >-
           pip install bandit black codespell flake8 flake8-2020 flake8-bugbear
@@ -32,6 +32,7 @@ jobs:
       # - run: pytest --doctest-modules . || true
       - run: shopt -s globstar && pyupgrade --py37-plus **/*.py || true
       - run: safety check
+      - uses: pre-commit/action@v3.0.0
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: '[Bot] lint_python - formatting updates!'
