Ignore duplicate code warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ disable = invalid-name, unused-argument, broad-except, missing-docstring, fixme,
           consider-using-f-string,
           too-many-branches, too-many-statements, too-many-arguments, protected-access,
           import-error, too-many-locals, import-outside-toplevel,
-          logging-fstring-interpolation, line-too-long
+          logging-fstring-interpolation, line-too-long, duplicate-code
 
 [pylint.FORMAT]
 max-line-length = 79
