--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,7 @@ builtin=clear,rare,informal,usage,code,names
 ignore-words-list=hass,master
 skip=./.*
 quiet-level=2
+
+[mypy]
+mypy_path = $MYPY_CONFIG_FILE_DIR
+explicit_package_bases = yes
