--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -126,8 +126,8 @@ repos:
         args:
           - --reports=no
           - --py-version=3.10
-        additional_dependencies:
-          - homeassistant-stubs==2023.2.1
+        #additional_dependencies:
+          #- homeassistant-stubs>=2023.1.7
         # exclude: ^$
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.991
@@ -144,5 +144,5 @@ repos:
           - --show-error-context
         additional_dependencies:
           - zigpy==0.43.0
-          - homeassistant-stubs==2023.2.1
+          #- homeassistant-stubs>=2023.1.7
           - pydantic
