Make command_data argument optional for bind_ieee

--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -716,11 +716,10 @@ bind_ieee:
         entity:
           integration: zha
     command_data:
-      description: >-
-        Binding target\nEntity name,\ndevice name, or\nIEEE address of
-        the node to execute command"
+      description: 'Binding target (Entity name, device name, or IEEE address of the
+        node to execute command).  By default: coordinator'
       example: 00:0d:6f:00:05:7d:2d:34
-      required: true
+      required: false
       selector:
         entity:
           integration: zha
@@ -2162,9 +2161,24 @@ zha_devices:
       example: lqi
       selector:
         select:
-          options: [ieee, nwk, manufacturer, model, name, quirk_applied, quirk_class,
-            manufacturer_code, power_source, lqi, rssi, last_seen, available, device_type,
-            user_given_name, device_reg_id, area_id]
+          options:
+            - ieee
+            - nwk
+            - manufacturer
+            - model
+            - name
+            - quirk_applied
+            - quirk_class
+            - manufacturer_code
+            - power_source
+            - lqi
+            - rssi
+            - last_seen
+            - available
+            - device_type
+            - user_given_name
+            - device_reg_id
+            - area_id
     event_success:
       description: Event name in case of success
       example: my_read_success_trigger_event
