set-output deprecated -> echo to

--- a/.github/workflows/stats.yaml
+++ b/.github/workflows/stats.yaml
@@ -9,7 +9,8 @@ jobs:
       # Credit: https://stackoverflow.com/questions/58033366/how-to-get-the-current-branch-within-github-actions
       - name: Extract branch name
         shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        #run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        run: echo "branch=$(echo ${GITHUB_REF#refs/heads/}) >> $GITHUB_OUTPUT"
         id: extract_branch
       - uses: actions/checkout@v3
         #with:
