Start support for response data

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,13 @@ exclude = .venv,.git,.tox
 max-line-length = 79
 # B028 is manually surrounded by quotes, consider using the `!r`
 # W503 line break before binary operator
+# E501 line too long
 ignore =
     B028,
     W503
+
+per-file-ignores =
+    custom_components/zha_toolkit/__init__.py:E501
 
 # per-file-ignores =
 #    example/*:F811,F401,F403
