--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -65,7 +65,7 @@ execute:
             - znp_nvram_restore
             - znp_restore
     ieee:
-      name: Device reference
+      name: Device Reference
       description: Entity name, device name, or IEEE address of the node to execute
         command
       example: 00:0d:6f:00:05:7d:2d:34
@@ -298,7 +298,7 @@ add_group:
     `add_to_group`
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node
       example: 00:0d:6f:00:05:7d:2d:34
@@ -363,7 +363,7 @@ add_to_group:
   description: Add device to group
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node
       example: 00:0d:6f:00:05:7d:2d:34
@@ -463,7 +463,7 @@ attr_read:
   description: Read Attribute
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -515,7 +515,7 @@ attr_read:
           max: 255
           mode: box
     state_id:
-      name: state_id
+      name: State Id
       description: >-
         When defined, name of state to write the read attribute value to
       example: sensor.example
@@ -609,7 +609,7 @@ attr_write:
   description: Write Attribute
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -815,7 +815,7 @@ bind_ieee:
   description: Bind clusters from ieee device to command_data device
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -901,7 +901,7 @@ bind_group:
   description: Bind clusters from ieee device to command_data device
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -982,7 +982,7 @@ binds_get:
     Get binding table from device.
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -1036,7 +1036,7 @@ binds_remove_all:
     Remove (Unbind) all bindings from device
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -1111,7 +1111,7 @@ conf_report:
     (100 or more) for sleepy devices."
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command"
@@ -1227,7 +1227,7 @@ conf_report_read:
     (100 or more) for sleepy devices."
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command"
@@ -1357,7 +1357,7 @@ get_groups:
   description: Get groups set on the endpoints of the device
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node
       example: 00:0d:6f:00:05:7d:2d:34
@@ -1412,7 +1412,7 @@ get_routes_and_neigbours:
   description: Scan for all routes and neighbours, results saved to config/scans/...
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node
       example: 00:0d:6f:00:05:7d:2d:34
@@ -1456,7 +1456,7 @@ get_zll_groups:
   description: Get groups for zll_cluster (if present)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node
       example: 00:0d:6f:00:05:7d:2d:34
@@ -1593,7 +1593,7 @@ handle_join:
     Handle join (ZHA should re-interrogate the device as on new join)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -1616,7 +1616,7 @@ ieee_ping:
   description: Ping device
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Ping: Requests IEEE address (using the known NWK Address)
       example: 00:0d:6f:00:05:7d:2d:34
@@ -1661,7 +1661,7 @@ rejoin:
     Send a rejoin request to the device (=leave with rejoin)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to request rejoin
       example: 00:0d:6f:00:05:7d:2d:34
@@ -1723,7 +1723,7 @@ leave:
     Send a Leave request to the device
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to leave
         the network
@@ -1776,7 +1776,7 @@ misc_reinitialize:
   description: Reinitialize device
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command"
@@ -1790,7 +1790,7 @@ misc_settime:
   description: Set Time Cluster attributes (Time, DST - except TimeStatus)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address
       example: 00:0d:6f:00:05:7d:2d:34
@@ -1859,7 +1859,7 @@ ota_notify:
     providers to fetch new images.
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -1930,7 +1930,7 @@ remove_all_groups:
   description: Remove all groups from (selected) endpoints on device
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node
       example: 00:0d:6f:00:05:7d:2d:34
@@ -1985,7 +1985,7 @@ remove_from_group:
   description: Remove device endpoints from group
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node
       example: 00:0d:6f:00:05:7d:2d:34
@@ -2051,7 +2051,7 @@ remove_group:
     to `remove_from_group`
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node
       example: 00:0d:6f:00:05:7d:2d:34
@@ -2116,7 +2116,7 @@ scan_device:
   description: Scan device (result written to file in /config/scans)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -2179,7 +2179,7 @@ unbind_coordinator:
     Remove (Unbind) all bindings from device to the coordinator (your HA Instance)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -2244,7 +2244,7 @@ tuya_magic:
     Do Tuya magic spell (= make most Tuya devices work normally)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to execute
         command
@@ -2297,7 +2297,7 @@ zcl_cmd:
   description: Send cluster command
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to send\
         command to
@@ -2392,7 +2392,7 @@ zdo_join_with_code:
     Allow a device to join with a code (bellows radio type only)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Entity name, device name, or IEEE address of the node to request rejoin
       example: 00:0d:6f:00:05:7d:2d:34
@@ -2494,7 +2494,7 @@ zha_devices:
   description: Export device information (Response, CSV File, Event)
   fields:
     ieee:
-      name: Device reference
+      name: Device Reference
       description: >-
         Optional Entity name, device name, or IEEE address of the device to
         provide details for.  Defaults to all devices
