Update pre-commit hoooks and related fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ max-line-length = 79
 
 [codespell]
 builtin=clear,rare,informal,usage,code,names
-ignore-words-list=hass,master
+ignore-words-list=hass,master,weerd
 skip=./.*
 quiet-level=2
 
