--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       - id: pyupgrade-docs
   - repo: https://github.com/executablebooks/mdformat
     # Do this before other tools "fixing" the line endings
-    rev: 0.7.16
+    rev: 0.7.17
     hooks:
       - id: mdformat
         name: Format Markdown
@@ -26,7 +26,7 @@ repos:
           - mdformat-web
           - mdformat-gfm
   - repo: https://github.com/asottile/blacken-docs
-    rev: 1.13.0
+    rev: 1.16.0
     hooks:
       - id: blacken-docs
         additional_dependencies: [black==22.6.0]
@@ -34,26 +34,26 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
+      - id: fix-byte-order-marker
+      - id: mixed-line-ending
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
       - id: no-commit-to-branch
         args: [--branch, main]
       - id: check-yaml
         args: [--unsafe]
       - id: debug-statements
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
       - id: check-json
-      - id: mixed-line-ending
       - id: check-builtin-literals
       - id: check-ast
       - id: check-merge-conflict
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
       - id: check-docstring-first
-      - id: fix-byte-order-marker
       - id: check-case-conflict
       # - id: check-toml
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.29.0
+    rev: v1.32.0
     hooks:
       - id: yamllint
         args:
@@ -69,17 +69,17 @@ repos:
     hooks:
       - id: shellcheck
         files: ^[^\.].*\.sh$
-        # Change the entry to make this work on cygwin
-        args: [-x,-e,SC2086,-e,SC2004,-e,SC2207,-e,SC2002,-e,SC2116]
+        # add "shellcheck disable=SC2086" codes to files, rather than global excludes:
+        # args: [-x,-e,SC2086,-e,SC2004,-e,SC2207,-e,SC2002,-e,SC2116]
         # args: ["--severity=warning"]  # Optionally only show errors and warnings
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
+    rev: v3.11.0
     hooks:
       - id: pyupgrade
         args:
           - --py39-plus
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 23.9.1
     hooks:
       - id: black
         args:
@@ -93,7 +93,7 @@ repos:
         args: [--skip, 'B101,B311', --recursive, .]
 
   - repo: https://github.com/fsouza/autoflake8
-    rev: v0.4.0
+    rev: v0.4.1
     hooks:
       - id: autoflake8
         args:
@@ -102,7 +102,7 @@ repos:
           - --expand-star-imports
           - custom_components
   - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
+    rev: 6.1.0
     hooks:
       - id: flake8
         additional_dependencies:
@@ -118,7 +118,7 @@ repos:
     hooks:
       - id: isort
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
+    rev: v2.2.5
     hooks:
       - id: codespell
         args:
@@ -138,7 +138,7 @@ repos:
           #- homeassistant-stubs>=2023.1.7
         # exclude: ^$
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.991
+    rev: v1.5.1
     hooks:
       - id: mypy
         args:
