Ignore uint for spelling

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ max-line-length = 79
 
 [codespell]
 builtin=clear,rare,informal,usage,code,names
-ignore-words-list=hass,master,weerd
+ignore-words-list=hass,master,weerd,uint
 skip=./.*
 quiet-level=2
 
