--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,14 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Get version
-        id: version
-        uses: home-assistant/actions/helpers/version@master
+      # - name: Get version
+      #   id: version
+      #   uses: home-assistant/actions/helpers/version@master
 
       - name: Set version number
-        run: python3 ${{ github.workspace }}/.github/scripts/update_hacs_manifest.py --version ${{ steps.version.outputs.version }}
+        run: |
+          python3 ${{ github.workspace }}/.github/scripts/update_hacs_manifest.py --version ${{ github.ref_name }}
+
       - name: Create zip
         run: |
           cd custom_components/zha_toolkit
