--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
         additional_dependencies: [black==22.6.0]
         stages: [manual]   # Manual because already done by mdformat-black
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: fix-byte-order-marker
       - id: mixed-line-ending
@@ -52,6 +52,10 @@ repos:
       - id: check-docstring-first
       - id: check-case-conflict
       # - id: check-toml
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.3
+    hooks:
+      - id: prettier
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.32.0
     hooks:
@@ -65,15 +69,15 @@ repos:
     hooks:
       - id: beautysh
   - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.9.0.5
+    rev: v0.9.0.6
     hooks:
       - id: shellcheck
         files: ^[^\.].*\.sh$
         # add "shellcheck disable=SC2086" codes to files, rather than global excludes:
-        # args: [-x,-e,SC2086,-e,SC2004,-e,SC2207,-e,SC2002,-e,SC2116]
+        # args: [-x,-e2086,-e2004,-e2207,-e2002,-e2116]
         # args: ["--severity=warning"]  # Optionally only show errors and warnings
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.11.0
+    rev: v3.15.0
     hooks:
       - id: pyupgrade
         args:
@@ -118,7 +122,7 @@ repos:
     hooks:
       - id: isort
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.5
+    rev: v2.2.6
     hooks:
       - id: codespell
         args:
