--- a/blueprints/blueprint_danfoss_ally_configure_script.yaml
+++ b/blueprints/blueprint_danfoss_ally_configure_script.yaml
@@ -2,7 +2,8 @@
 blueprint:
   domain: script
   name: Danfoss Ally TRV configuration
-  description: "IMPORTANT NOTE:  This blueprint is provided as an example. In practice\
+  description:
+    "IMPORTANT NOTE:  This blueprint is provided as an example. In practice\
     \ having a blueprint for a script does not seem of much use, if you think it is\
     \ useful discuss about it in a github discussion or issue!\nUse the script in\
     \ the example directory instead\nA script that configures the reporting of a Danfoss\
@@ -27,7 +28,7 @@ sequence:
   - alias: Configure reporting of local_temperature in Thermostat cluster
     service: zha_toolkit.conf_report
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 0x0201
       attribute: 0
       tries: 100
@@ -38,7 +39,7 @@ sequence:
   - alias: Read back reporting configuration, for debugging
     service: zha_toolkit.conf_report_read
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 0x0201
       attribute: 0
       tries: 100
@@ -46,7 +47,7 @@ sequence:
   - alias: Enable close window functionality
     service: zha_toolkit.attr_write
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 16387
       attr_val: 0
