--- a/custom_components/zha_toolkit/manifest.json
+++ b/custom_components/zha_toolkit/manifest.json
@@ -1,17 +1,11 @@
 {
-    "domain": "zha_toolkit",
-    "name": "\ud83e\uddf0 ZHA Toolkit",
-    "codeowners": [
-        "@mdeweerd"
-    ],
-    "dependencies": [
-        "zha"
-    ],
-    "documentation": "https://github.com/mdeweerd/zha-toolkit",
-    "iot_class": "local_polling",
-    "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues",
-    "requirements": [
-        "pytz"
-    ],
-    "version": "1.0.0"
+  "domain": "zha_toolkit",
+  "name": "\ud83e\uddf0 ZHA Toolkit",
+  "codeowners": ["@mdeweerd"],
+  "dependencies": ["zha"],
+  "documentation": "https://github.com/mdeweerd/zha-toolkit",
+  "iot_class": "local_polling",
+  "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues",
+  "requirements": ["pytz"],
+  "version": "1.0.0"
 }
