--- a/examples/script_danfoss_ally_configure.yaml
+++ b/examples/script_danfoss_ally_configure.yaml
@@ -7,10 +7,10 @@ sequence:
   - alias: Configure reporting of local_temperature in Thermostat cluster
     service: zha_toolkit.conf_report
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 0
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       event_done: zha_done
       reportable_change: 20
       max_interval: 300
@@ -18,114 +18,114 @@ sequence:
   - alias: Read back reporting configuration, for debugging
     service: zha_toolkit.conf_report_read
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 0
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       event_done: zha_done
   - alias: Set lower limit for setpoint
     service: zha_toolkit.attr_write
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 21
-      attr_val: '{{ ( set_min_temperature | float * 100) | int }}'
-      tries: '{{ default_tries }}'
+      attr_val: "{{ ( set_min_temperature | float * 100) | int }}"
+      tries: "{{ default_tries }}"
       csvout: danfoss_config.csv
   - alias: Set upper limit for setpoint
     service: zha_toolkit.attr_write
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 22
-      attr_val: '{{ ( set_max_temperature | float * 100) | int }}'
-      tries: '{{ default_tries }}'
+      attr_val: "{{ ( set_max_temperature | float * 100) | int }}"
+      tries: "{{ default_tries }}"
       csvout: danfoss_config.csv
   - alias: Set Display rotation
     service: zha_toolkit.attr_write
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 516
       attribute: 16384
-      attr_val: '{{ 0 if view_direction else 1 }}'
+      attr_val: "{{ 0 if view_direction else 1 }}"
       manf: 4678
       event_done: zha_done
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       csvout: danfoss_config.csv
   - alias: Set open window detection
     service: zha_toolkit.attr_write
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 16465
-      attr_val: '{{ 1 if enable_open_window else 0 }}'
+      attr_val: "{{ 1 if enable_open_window else 0 }}"
       manf: 4678
       event_done: zha_done
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       csvout: danfoss_config.csv
   - alias: Check if window open reporting is configured, for debugging
     service: zha_toolkit.conf_report_read
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 16384
       manf: 4678
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       event_done: zha_done
   - alias: Set TRV orientation (horizontal/vertical)
     service: zha_toolkit.attr_write
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 16404
-      attr_val: '{{ 1 if orientation else 0 }}'
+      attr_val: "{{ 1 if orientation else 0 }}"
       manf: 4678
       event_done: zha_done
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       csvout: danfoss_config.csv
   - alias: Set time
     service: zha_toolkit.misc_settime
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       event_done: zha_done
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       csvout: danfoss_config.csv
   - alias: Set time status to synchronised
     service: zha_toolkit.attr_write
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 10
       attribute: 1
       attr_val: 2
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       csvout: danfoss_config.csv
   - alias: Set covered mode
     service: zha_toolkit.attr_write
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 16406
-      attr_val: '{{ 1 if covered else 0 }}'
+      attr_val: "{{ 1 if covered else 0 }}"
       manf: 4678
-      tries: '{{ default_tries}}'
+      tries: "{{ default_tries}}"
       csvout: danfoss_config.csv
   - alias: Check heat request reporting configuration
     service: zha_toolkit.conf_report_read
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 16433
       manf: 4678
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       event_done: zha_done
   - alias: Read Heat Supply Request
     service: zha_toolkit.attr_read
     data:
-      ieee: '{{ ieee }}'
+      ieee: "{{ ieee }}"
       cluster: 513
       attribute: 16433
       manf: 4678
-      tries: '{{ default_tries }}'
+      tries: "{{ default_tries }}"
       csvout: danfoss_config.csv
 description: >-
   A script that configures a Danfoss Ally TRV zigbee thermostat.  You can listen
