Add reference to ruff

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,6 +76,14 @@ repos:
         # add "shellcheck disable=SC2086" codes to files, rather than global excludes:
         # args: [-x,-e2086,-e2004,-e2207,-e2002,-e2116]
         # args: ["--severity=warning"]  # Optionally only show errors and warnings
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.9
+    hooks:
+      # Note, added for future reference, not used
+      - id: ruff
+        stages: [manual]
+      - id: ruff-format
+        stages: [manual]
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.0
     hooks:
