--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -20,7 +20,7 @@ jobs:
           cache: pip
           python-version: 3.12.1
       - run: python -m pip install pre-commit regex
-      - uses: actions/cache/restore@v3
+      - uses: actions/cache/restore@v4
         with:
           path: ~/.cache/pre-commit/
           key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml')
@@ -32,17 +32,25 @@ jobs:
           set -o pipefail
           pre-commit gc
           pre-commit run --show-diff-on-failure --color=always --all-files | tee ${RAW_LOG}
-      - name: Convert Raw Log to CheckStyle format
-        if: ${{ failure() }}
-        run: |
-          python ${LOG_TO_CS} ${RAW_LOG} ${CS_XML}
-      - name: Annotate Source Code with Messages
-        uses: staabm/annotate-pull-request-from-checkstyle-action@v1
+      - name: Convert Raw Log to annotations
+        uses: mdeweerd/logToCheckStyle@v2024.2.2
         if: ${{ failure() }}
         with:
-          files: ${{ env.CS_XML }}
-          notices-as-warnings: true  # optional
-          prepend-filename: true  # optional
+          in: ${{ env.RAW_LOG }}
+          # Out can be omitted if you do not need the xml output
+          # out: ${{ env.CS_XML }}
+
+      # - name: Convert Raw Log to CheckStyle format
+      #   if: ${{ failure() }}
+      #   run: |
+      #     python ${LOG_TO_CS} ${RAW_LOG} ${CS_XML}
+      # - name: Annotate Source Code with Messages
+      #   uses: staabm/annotate-pull-request-from-checkstyle-action@v1
+      #   if: ${{ failure() }}
+      #   with:
+      #     files: ${{ env.CS_XML }}
+      #     notices-as-warnings: true  # optional
+      #     prepend-filename: true  # optional
       - uses: actions/cache/save@v3
         if: ${{ always() }}
         with:
