--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -163,7 +163,7 @@ repos:
           - --show-error-codes
           - --show-error-context
         additional_dependencies:
-          - zigpy>=0.43.0
-          - cryptography==3.3.2  # Compatible/Available on cygwin
+          - zigpy==0.61.0
+          # - cryptography==3.3.2  # Compatible/Available on cygwin
           #- homeassistant-stubs>=2023.1.7
           #- pydantic
