--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -7,59 +7,41 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     env:
-      LOG_TO_CS: .github/logToCs.py
       RAW_LOG: pre-commit.log
       CS_XML: pre-commit.xml
     steps:
       - run: sudo apt-get update && sudo apt-get install cppcheck
         if: false
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         if: false
         with:
           cache: pip
           python-version: 3.12.1
-      - run: python -m pip install pre-commit regex
+      - run: python -m pip install pre-commit
       - uses: actions/cache/restore@v4
         with:
           path: ~/.cache/pre-commit/
-          key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml')
-            }}
+          key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Run pre-commit hooks
-        env:
-          SKIP: no-commit-to-branch
         run: |
           set -o pipefail
           pre-commit gc
           pre-commit run --show-diff-on-failure --color=always --all-files | tee ${RAW_LOG}
-      - name: Convert Raw Log to annotations
-        uses: mdeweerd/logToCheckStyle@v2024.2.2
+      - name: Convert Raw Log to Checkstyle format (launch action)
+        uses: mdeweerd/logToCheckStyle@v2024.2.3
         if: ${{ failure() }}
         with:
           in: ${{ env.RAW_LOG }}
-          # Out can be omitted if you do not need the xml output
           # out: ${{ env.CS_XML }}
-
-      # - name: Convert Raw Log to CheckStyle format
-      #   if: ${{ failure() }}
-      #   run: |
-      #     python ${LOG_TO_CS} ${RAW_LOG} ${CS_XML}
-      # - name: Annotate Source Code with Messages
-      #   uses: staabm/annotate-pull-request-from-checkstyle-action@v1
-      #   if: ${{ failure() }}
-      #   with:
-      #     files: ${{ env.CS_XML }}
-      #     notices-as-warnings: true  # optional
-      #     prepend-filename: true  # optional
-      - uses: actions/cache/save@v3
-        if: ${{ always() }}
+      - uses: actions/cache/save@v4
+        if: ${{ ! cancelled() }}
         with:
           path: ~/.cache/pre-commit/
-          key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml')
-            }}
+          key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Provide log as artifact
-        uses: actions/upload-artifact@v3
-        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        if: ${{ ! cancelled() }}
         with:
           name: precommit-logs
           path: |
