Initialise data if None

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -166,7 +166,8 @@ repos:
           - --show-error-context
         additional_dependencies:
           - zigpy==0.61.0
-          - aiofiles>=0.4.0
+          - types_aiofiles>=0.4.0
+          - types_pytz>=2023.1
           # - cryptography==3.3.2  # Compatible/Available on cygwin
           #- homeassistant-stubs>=2023.1.7
           #- pydantic
